# bookmarks

./: .env  README.md  db.py  env.py  main.py  pyproject.toml  run
db/: init.schema  utils.py
templates/: add.html  edit.html  index.html  layout.html  login.html  search.html  tag.html
