[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = ["Sriram Thaiyar <sriram.thaiyar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
peewee = "^3.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
